fixed sidenav flicker

--- a/src/app.scss
+++ b/src/app.scss
@@ -373,7 +373,8 @@ input:-moz-placeholder { @include placeholder-style(); }
   box-shadow: 0px 0px 60px rgba(0, 0, 0, 0.03);
 
   &.sidebar {
-    font-size: .85em;
+    font-size: .8em;
+    // overflow-y: auto;
 
     @media (min-width: $screen-lg) {
        width: 330px;
@@ -389,12 +390,12 @@ input:-moz-placeholder { @include placeholder-style(); }
     }
 
   &.sidebar:hover {
-    .col-sm-4 {
-      position: relative;
-    }
-    overflow-y: auto;
-    max-height: 100%;
-    padding-bottom: 13%;
+    // .col-sm-4 {
+    //   position: relative;
+    // }
+    
+    // max-height: 100%;
+    // padding-bottom: 13%;
   }
 
     a {
